--- a/Sprint 1/assignment1.css
+++ b/Sprint 1/assignment1.css
@@ -1,17 +1,18 @@
 *{
-    padding: 0%;
-    margin: 0%;
+    padding: 0px;
+    margin: 0px;
 }
 header{
     font-family: italic;
     font-size: large;
     text-align: center;
     color: black;
-    padding: 0%;
-    margin: 0%;
+   
 }
 body{
     background-image: url(muniba2.png);
+    
+    
 
 }
 .main .left{
@@ -21,6 +22,7 @@ body{
     height: 20vh;
     width: 50vw;
     padding-left: 5px;
+    color:#fff;
    
 }
 .left img{
@@ -42,13 +44,21 @@ body{
 
 .main .right {
     background-image: url(muniba1.jpg);
-    height: 28vh;
-    width: 52%;
-    color: #fff;
-    text-align: left;
+    height: 30vh;
+    width: 50%;
+    color:#fff;
     padding-top: 20%;
+    text-align: left;
+    position: relative;
+    left: 660px;
+  
 
 }
-
+.q{
+    font-size: bolder;
+    color:maroon;
+    padding-left: 40px;
+    
+}
 
 
