finished css units and their values

--- a/class3/class3.css
+++ b/class3/class3.css
@@ -15,7 +15,11 @@ background-color: blue;
 }
 .five{
     position: sticky;
-    left: 100px;
-    top:200px;
+    left: 500px;
+    top:500px;
     background-color: cornflowerblue;
+}
+h1{
+    text-shadow: 3px 2px blue;
+    color: burlywood;
 }
