--- a/Class 5/class5 task 1/style.css
+++ b/Class 5/class5 task 1/style.css
@@ -1,6 +1,10 @@
+*{
+	padding: 0;
+	margin: 0;
+}
 .container{
     border: 1px solid black;
-    margin: 500px;
+    margin: 200px 500px;
     padding: 20px;
 }
 .header{
@@ -11,7 +15,7 @@
 }
 .submit{
     background-color: chocolate;
-    tex
+    
     
 }
 .text{
